Fix to IE alignment issues

--- a/scss/_uscc-animations.scss
+++ b/scss/_uscc-animations.scss
@@ -42,6 +42,9 @@
 }
 .flip, .digit {
   float: left;
+  &:after {
+    clear:both;
+  }
 }
 .flip-wrap {
 	position: relative;
